# _podcaster-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  daily.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.opencode/: opencode.json
scripts/: podcaster-bot.service  run-once.sh  serve.sh  setup-dirs.sh
src/podcaster_ai/: __init__.py  __main__.py  bot.py  config.py  deliver.py  llm.py  research.py  run.py  script.py  shownotes.py  tts.py
src/podcaster_ai/data/: concept_pool.json
src/podcaster_ai/pipeline/: __init__.py
src/podcaster_ai/pipeline/sources/: __init__.py  abusech_ransomware.py  ai_newsletters.py  ai_security_news.py  base.py  bug_bounty_reports_explained.py  cert_in.py  cisa_advisories.py  cisa_kev.py  cisco_talos.py  concept_pool.py  conferences.py  critical_thinking_podcast.py  cyberwire_daily.py  dark_reading.py  darknet_diaries.py  defcon_blackhat.py  dfir_report.py  exploit_db.py  github_advisories.py  hacker_news.py  hackerone_hacktivity.py  hak5.py  hardware_hacking.py  infosecurity_magazine.py  krebs_on_security.py  mastodon.py  microsoft_security.py  nitter_rss.py  nullcon.py  nvd_recent.py  owasp.py  portswigger_rss.py  project_zero.py  projectdiscovery_releases.py  ransomware_live.py  ransomwatch.py  reddit_netsec.py  scraper.py  (+7 more)
src/podcaster_ai/web/: __init__.py  auth.py  bootstrap.py  db.py  deps.py  jobs.py  main.py  models.py
stubs/: feedparser.pyi  pydub.pyi
systemd/: podcaster-ai-web.service  podcaster-ai.service  podcaster-ai.timer
tests/: test_smoke.py  test_web.py
(+10 files in other folders)
